--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Spreadsheet</h1>
-      <h2 class="project-tagline">A simple spreadsheet implemented via Java</h2>
+      <h2 class="project-tagline">A spreadsheet Java implementation</h2>
       <a href="https://github.com/konvio/spreadsheet" class="btn">View on GitHub</a>
       <a href="https://github.com/konvio/spreadsheet/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/konvio/spreadsheet/tarball/master" class="btn">Download .tar.gz</a>
